# sdk

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.archon/: README.md
.archon/commands/: generate-conformance.md  implement-resource-go.md  implement-resource-node.md  implement-resource-python.md
.archon/workflows/: add-sdk-resource.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: validate_conformance.py
.github/workflows/: changeset-required.yml  conformance.yml  go.yml  live-smoke.yml  node.yml  openapi-sync.yml  python.yml  release-python.yml  release.yml
conformance/: README.md
conformance/scenarios/: error-403-forbidden.yaml  error-404-not-found.yaml  error-422-validation.yaml  error-429-rate-limit.yaml  headers-telemetry-disabled.yaml  headers-version-pinned.yaml  list-happy.yaml  retrieve-happy.yaml
openapi/: README.md  package-lock.json  package.json  spec.json  spec.yaml  tsconfig.json
openapi/scripts/: fetch.ts
sdk-go/: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  .testcoverage.yml  CHANGELOG.md  Makefile  README.md  api_version.go  config.go  config_test.go  conformance_test.go  doc.go  errors_base.go  errors_test.go  errors_types.go  go.mod  helpers.go  helpers_test.go  nullable.go  nullable_test.go  version.go
sdk-go/client/: api.go  api_test.go
sdk-go/conformance/: dispatch_contacts_test.go  dispatch_entitlements_test.go  dispatch_events_test.go  dispatch_features_test.go  dispatch_forms_test.go  dispatch_invoices_test.go  dispatch_prices_test.go  dispatch_properties_test.go  dispatch_subscriptions_test.go  runner_test.go
sdk-go/filters/: builder.go  builder_test.go  types.go
sdk-go/pagination/: auto_paginator.go  (+3 more)
sdk-node/: .env.example  .npmignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
sdk-python/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk-python/examples/contacts/: attach_payment_method.py  auto_paginate.py  auto_paginate_async.py  bulk_upsert.py  count.py  create.py  create_payment_method_setup_intent.py  delete.py  filters_demo.py  list_activity.py  list_async.py  list_sync.py  remove_payment_method.py  retrieve.py  retrieve_payment_method.py  update.py
sdk-python/examples/entitlements/: auto_paginate.py  consume.py  error_handling.py  grant.py  list_async.py  list_sync.py  lookup.py  retrieve.py
sdk-python/examples/events/: auto_paginate.py  error_handling.py  filters_demo.py  list_async.py  list_sync.py  retrieve.py  update.py
sdk-python/examples/features/: archive.py  auto_paginate.py  create.py  error_handling.py  list_async.py  list_sync.py  resolve.py  retrieve.py  unarchive.py  update.py
sdk-python/examples/forms/: add_element.py  add_logic_rule.py  auto_paginate.py  auto_paginate_async.py  create.py  delete_element.py  disable_other_option.py  duplicate.py  enable_other_option.py  error_handling.py  list_async.py  list_sync.py  move_element.py  remove_logic_rule.py  retrieve.py  update.py  update_element.py
sdk-python/examples/invoices/: auto_charge.py  auto_paginate.py  create_and_finalize.py  delete_draft.py  list_sync.py  record_payment.py  refund_payment.py  retrieve.py  update.py  void.py
sdk-python/examples/prices/: archive.py  auto_paginate.py  create.py  error_handling.py  list_async.py  list_sync.py  retrieve.py  unarchive.py  update.py
sdk-python/examples/properties/: auto_paginate.py  auto_paginate_async.py  create.py  list_async.py  list_sync.py  retrieve.py  update.py
sdk-python/examples/subscriptions/: auto_paginate.py  cancel.py  comp_next_cycle.py  create.py  list_sync.py  manage_url.py  preview_upcoming_invoice.py  retrieve.py  uncomp_next_cycle.py  update.py
sdk-python/scripts/: livesmoke.py  smoke-local.sh
sdk-python/src/threecommon/: __init__.py  api_version.py  client.py  config.py  helpers.py  version.py
sdk-python/src/threecommon/_core/: __init__.py  headers.py  http_client.py  parse.py  retry.py  telemetry.py  url.py
sdk-python/src/threecommon/_generated/: __init__.py  models.py
sdk-python/src/threecommon/contacts/: __init__.py  service.py  types.py
sdk-python/src/threecommon/entitlements/: __init__.py  service.py  types.py
sdk-python/src/threecommon/errors/: __init__.py  base.py  classes.py
sdk-python/src/threecommon/events/: __init__.py  service.py  types.py
sdk-python/src/threecommon/features/: __init__.py  service.py  types.py
sdk-python/src/threecommon/filters/: __init__.py  builder.py  types.py
sdk-python/src/threecommon/forms/: __init__.py  service.py  types.py
sdk-python/src/threecommon/invoices/: __init__.py  service.py  types.py
sdk-python/src/threecommon/pagination/: __init__.py  auto_paginator.py
sdk-python/src/threecommon/prices/: __init__.py  service.py  types.py
sdk-python/src/threecommon/properties/: __init__.py  service.py  types.py
sdk-python/src/threecommon/subscriptions/: __init__.py  service.py  types.py
sdk-python/tests/: conftest.py  test_config.py  test_conformance.py  test_contacts.py  test_entitlements.py  test_errors.py  test_events.py  test_features.py  test_filters.py  test_forms.py  test_helpers.py  test_invoices.py  test_pagination.py  test_prices.py  test_properties.py  test_subscriptions.py
sdk-python/tests/_conformance/: __init__.py  dispatch_contacts.py  dispatch_entitlements.py  dispatch_events.py  dispatch_features.py  dispatch_forms.py  dispatch_invoices.py  dispatch_prices.py  dispatch_properties.py  dispatch_subscriptions.py
sdk-python/tests/_core/: test_headers.py  test_http_client.py  test_parse.py  test_retry.py  test_telemetry.py  test_url.py
(+455 files in other folders)
